--- a/about.html
+++ b/about.html
@@ -12,80 +12,6 @@
     <link rel="mask-icon" href="media/favicon-tbc-logo.svg" color="rgb(36,38,58)" />
     <link rel="shortcut icon" href="media/favicon-tbc-logo.png" />
     <link rel="stylesheet" href="css/main.css" />
-    <!-- <style>
-        * {
-            box-sizing: border-box;
-            list-style: none;
-            text-decoration: none;
-        }
-
-        body {
-            background-color: yellow;
-            font-family: Roboto;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            width: 100vw;
-        }
-
-        a {
-            display: block;
-            color: #000;
-        }
-
-        div {
-            border-radius: 20px;
-            box-shadow: 1px 3px 5px 1px rgb(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
-            height: 400px;
-            width: 300px;
-        }
-
-        div:hover {
-            box-shadow: 2px 4px 6px 2px rgb(0, 0, 229, 2.5);
-        }
-
-        img {
-            border-radius: 50%;
-            box-shadow: 1px 3px 5px 1px rgb(0, 0, 0, 0.1);
-            height: 100px;
-            width: 100px;
-        }
-
-        h1 {
-            margin: 10px 0 0;
-        }
-
-        h3,
-        p {
-            margin: 5px;
-            padding: 0;
-            text-align: center;
-        }
-
-        ul {
-            display: flex;
-            gap: 1rem;
-            margin: 12px 0 0;
-            padding: 0;
-        }
-
-        li {
-            font-size: 25px;
-        }
-
-        i:hover {
-            color: rgb(0, 0, 229, 2.5);
-        }
-    </style> -->
     <style>
         body {
             font-family: "Lato", Helvetica, sans-serif;
@@ -95,7 +21,7 @@
         }
 
         .profile-container {
-            max-width: 600px;
+            max-width: 90%;
             margin: 50px auto;
             background: #fff;
             border-radius: 10px;
@@ -309,19 +235,15 @@
                 <div class="col-one-fifth">
                     <h6>Exchange Programs</h6>
                     <ul class="blank">
-                      <li><a href="https://www.facebook.com/mkbavicaus">Karen Buddhist Association of North Carolina</a></li>
-                      <li><a href="https://www.facebook.com/mkbavicaus">Melbourne Karen Buddhist Association</a></li>
+                        <li><a href="https://www.facebook.com/mkbavicaus">Karen Buddhist Association of North
+                                Carolina</a></li>
+                        <li><a href="https://www.facebook.com/mkbavicaus">Melbourne Karen Buddhist Association</a></li>
                     </ul>
                 </div>
                 <div class="col-one-fifth">
                     <h6>Support</h6>
                     <ul class="blank">
                         <li><a href="style-guide.html">Design System</a></li>
-                        <li><a href="#">Documentation</a></li>
-                        <li><a href="#">Requirements</a></li>
-                        <li><a href="#">License</a></li>
-                        <li><a href="#">Updates</a></li>
-                        <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-one-fifth">
