--- a/academics.html
+++ b/academics.html
@@ -151,11 +151,7 @@
         <div class="col-one-fifth">
           <h6>Support</h6>
           <ul class="blank">
-            <li><a href="#">Documentation</a></li>
-            <li><a href="#">Requirements</a></li>
-            <li><a href="#">License</a></li>
-            <li><a href="#">Updates</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="style-guide.html">Design System</a></li>
           </ul>
         </div>
         <div class="col-one-fifth">
