--- a/default-template.html
+++ b/default-template.html
@@ -44,23 +44,16 @@
     <div class="padding">
       <div class="row max-width-l">
         <div class="col-one-fifth">
-          <h6>Startup</h6>
+          <h6>Exchange Programs</h6>
           <ul class="blank">
-            <li><a href="#">Getting Started</a></li>
-            <li><a href="#">Resources</a></li>
-            <li><a href="#">Design</a></li>
-            <li><a href="#">Tutorials</a></li>
-            <li><a href="#">Pricing</a></li>
+            <li><a href="https://www.facebook.com/mkbavicaus">Karen Buddhist Association of North Carolina</a></li>
+            <li><a href="https://www.facebook.com/mkbavicaus">Melbourne Karen Buddhist Association</a></li>
           </ul>
         </div>
         <div class="col-one-fifth">
           <h6>Support</h6>
           <ul class="blank">
-            <li><a href="#">Documentation</a></li>
-            <li><a href="#">Requirements</a></li>
-            <li><a href="#">License</a></li>
-            <li><a href="#">Updates</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="style-guide.html">Design System</a></li>
           </ul>
         </div>
         <div class="col-one-fifth">
