--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
             height: 150px;
             border-radius: 50%;
             object-fit: cover;
-            border: 5px solid #3498db;
+            border: 5px solid #1645F5;
         }
 
         .profile-name {
@@ -53,7 +53,7 @@
 
         .profile-bio h2 {
             font-size: 20px;
-            color: #3498db;
+            color: #1645F5;
             margin-bottom: 10px;
         }
 
@@ -120,7 +120,7 @@
         <div class="profile-container">
             <div class="profile-header">
                 <img src="media/content/founder-profile-pic.jpg" alt="Profile Picture" class="profile-pic">
-                <h1 class="profile-name">Ashin Paññasãmi (Biography)</h1>
+                <h1 class="profile-name">Dr. Ashin Paññasãmi (Biography)</h1>
             </div>
             <div class="profile-bio">
                 <h2>Early life</h2>
