--- a/academics.html
+++ b/academics.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width" />
   <link rel="apple-touch-icon-precomposed" href="media/favicon-tbc-logo.png" />
   <link rel="icon" href="media/favicon-tbc-logo.png" />
-  <link rel="mask-icon" href="media/favicon-tbc-logo.svg" color="rgb(36,38,58)" />
+  <link rel="mask-icon" href="media/favicon-tbc-logo.png" color="rgb(36,38,58)" />
   <link rel="shortcut icon" href="media/favicon-tbc-logo.png" />
   <link rel="stylesheet" href="css/main.css" />
 </head>
@@ -34,7 +34,7 @@
 
     <section class="center">
       <div class="row no-gutter full-screen">
-        <div class="col-one-half bg-image-02 overlay"></div>
+        <div class="col-one-half bg-image-02"></div>
         <div class="col-one-half middle padding">
           <div class="max-width-m">
             <h1>Academics</h1>
@@ -58,7 +58,7 @@
       <div class="margin-bottom margin-top">
         <h2>Admission Requirements</h2> 
         <p class="lead">
-          Taunggalay Buddhism College welcomes applications from bhikkhu, bhikkhunī, and laypeople who have completed a certain level of Pariyatti study in Buddhism. Applicants must be between the ages of 20 and 30 and have a basic or intermediate level of English proficiency, as all instruction will be conducted in English. For those fluent only in Burmese and East Pwo Karen (Phlon), teaching assistants will be available to provide guidance throughout the course.
+          Taunggalay Buddhism College welcomes applications from bhikkhu, bhikkhunī, and laypeople who have completed a certain level of Pariyatti study in Buddhism. Applicants must be between the ages of 18 and 25 and have a basic or intermediate level of English proficiency, as all instruction will be conducted in English. For those fluent only in Burmese and East Pwo Karen (Phlon), teaching assistants will be available to provide guidance throughout the course.
         </p>  
       </div>
     </section>
