--- a/style-guide.html
+++ b/style-guide.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width" />
   <link rel="apple-touch-icon-precomposed" href="media/favicon-tbc-logo.png" />
   <link rel="icon" href="media/favicon-tbc-logo.png" />
-  <link rel="mask-icon" href="media/favicon-tbc-logo.svg" color="rgb(36,38,58)" />
+  <link rel="mask-icon" href="media/favicon-tbc-logo.png" color="rgb(36,38,58)" />
   <link rel="shortcut icon" href="media/favicon-tbc-logo.png" />
   <link rel="stylesheet" href="css/main.css" />
 </head>
