remove email sub box

--- a/default-template.html
+++ b/default-template.html
@@ -63,7 +63,7 @@
             <li><a href="https://www.facebook.com/maharpyinnyar.tgl">Facebook</a></li>
           </ul>
         </div>
-        <div class="col-two-fifths">
+        <!-- <div class="col-two-fifths">
           <h6>Join The Newsletter</h6>
           <p>Get the latest news and resources right into your inbox every monday.</p>
           <form class="row reduce-spacing">
@@ -74,7 +74,7 @@
               <a href="#" class="button button-primary button-m full-width" role="button">Subscribe</a>
             </div>
           </form>
-        </div>
+        </div> -->
       </div>
     </div>
     <p class="copyright"><span>Copyright © 2024 TBC. All rights reserved.</span></p>
