--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
   <main>
 
-    <section class="bg-image-01 center full-screen middle overlay padding">
+    <section class="bg-image-03 center full-screen middle overlay padding">
       <div class="max-width-m">
         <h1>Taunggalay Buddhism College</h1>
         <p class="lead">Where Buddhism meets Science</p>
@@ -182,7 +182,7 @@
             <!-- <li><a href="#">Medium</a></li> -->
           </ul>
         </div>
-        <div class="col-two-fifths">
+        <!-- <div class="col-two-fifths">
           <h6>Join The Newsletter</h6>
           <p>Get the latest news and resources right into your inbox every monday.</p>
           <form class="row reduce-spacing">
@@ -193,7 +193,7 @@
               <a href="#" class="button button-primary button-m full-width" role="button">Subscribe</a>
             </div>
           </form>
-        </div>
+        </div> -->
       </div>
     </div>
     <p class="copyright"><span>Copyright © 2024 TBC. All rights reserved.</span></p>
