update meta description

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <title>Taunggalay Buddhism College</title>
     <meta charset="utf-8" />
     <meta name="description"
-        content="A minimal and responsive HTML5 landing page built on lightweight, clean and customizable code." />
+        content="Taunggalay Buddhism College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge." />
     <meta name="viewport" content="width=device-width" />
     <link rel="apple-touch-icon-precomposed" href="media/favicon-tbc-logo.png" />
     <link rel="icon" href="media/favicon-tbc-logo.png" />
