update chem-101 in academics page

--- a/academics.html
+++ b/academics.html
@@ -83,58 +83,53 @@
       </div>
     </section>
 
-    
-    <!-- <section class="bg-dark dark padding">
+    <section class="center padding">
+      <div class="margin-bottom max-width-m">
+        <h3>Curriculum / Courses Overview</h3>
+        <p class="lead">The two-year degree program at Taunggalay Buddhism College is designed to provide a comprehensive education that integrates modern sciences with traditional Buddhist studies. Our curriculum aims to equip students with a strong foundation in both academic and spiritual knowledge.</p>
+      </div>
       <div class="max-width-l">
-        <div class="center margin-bottom">
-          <h3>Or find the perfect paid plan for your business.</h3>
-          <p class="lead">Thousands of people rely on our service.</p>
-        </div>
-        <div class="pricing-switch center">
-          <ul class="inline">
-            <li>Pay yearly:</li>
-            <li>
-              <form>
-                <input id="yearly" class="switch" type="checkbox">
-                <label for="yearly" class="switch"></label>
-              </form>
-            </li>
-          </ul>
+        <div class="row margin-bottom">
+          <div class="col-one-fourth">
+            <div>
+              <img class="min-width-l rounded" src="media/content/courses/chem-101.jpeg" srcset="media/content/courses/chem-101.jpeg 1x, media/content/courses/chem-101@2x.jpeg 2x" alt="Editor">
+            </div>
+            <!-- <i class="feature-icons material-icons bg-gradient-pink dark">format_shapes</i> -->
+            <h6><br>CHEM 101 <br> Introduction to Chemistry</h6>
+          </div>
+          <div class="col-one-fourth">
+            <i class="feature-icons material-icons bg-gradient-cyan dark">network_check</i>
+            <h6>Rocket Fast</h6>
+          </div>
+          <div class="col-one-fourth">
+            <i class="feature-icons material-icons bg-gradient-green dark">line_style</i>
+            <h6>Custom Framework</h6>
+          </div>
+          <div class="col-one-fourth">
+            <i class="feature-icons material-icons bg-gradient-indigo dark">chrome_reader_mode</i>
+            <h6>Design System</h6>
+          </div>
         </div>
         <div class="row">
-          <div class="col-one-third card card-content">
-            <h6>For Professionals</h6>
-            <div class="lead space-bottom">
-              <span class="pricing-monthly">$10</span>
-              <span class="pricing-yearly">$8</span>
-              <span class="pricing-duration muted">/MO</span>
-            </div>
-            <p class="lead">Ut enim ad minima veniam, quis nostrum exercitationem.</p>
-            <a href="signup.html" class="button button-secondary full-width violet" role="button">Purchase</a>
+          <div class="col-one-fourth">
+            <i class="feature-icons material-icons bg-gradient-olive dark">code</i>
+            <h6>CSS + SASS</h6>
           </div>
-          <div class="col-one-third card card-content">
-            <h6>For Teams</h6>
-            <div class="lead space-bottom">
-              <span class="pricing-monthly">$20</span>
-              <span class="pricing-yearly">$16</span>
-              <span class="pricing-duration muted">/MO</span>
-            </div>
-            <p class="lead">Ut enim ad minima veniam, quis nostrum exercitationem.</p>
-            <a href="signup.html" class="button button-secondary full-width violet" role="button">Purchase</a>
+          <div class="col-one-fourth">
+            <i class="feature-icons material-icons bg-gradient-sienna dark">settings</i>
+            <h6>100% Customizable</h6>
           </div>
-          <div class="col-one-third card card-content">
-            <h6>For Enterprises</h6>
-            <div class="lead space-bottom">
-              <span class="pricing-monthly">$50</span>
-              <span class="pricing-yearly">$40</span>
-              <span class="pricing-duration muted">/MO</span>
-            </div>
-            <p class="lead">Ut enim ad minima veniam, quis nostrum exercitationem.</p>
-            <a href="signup.html" class="button button-secondary full-width violet" role="button">Purchase</a>
+          <div class="col-one-fourth">
+            <i class="feature-icons material-icons bg-gradient-blue dark">view_day</i>
+            <h6>Modular Design</h6>
+          </div>
+          <div class="col-one-fourth">
+            <i class="feature-icons material-icons bg-gradient-violet dark">check</i>
+            <h6>HTML5 Valid</h6>
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
   </main>
 
