comment out other non-courses

--- a/academics.html
+++ b/academics.html
@@ -91,13 +91,10 @@
       <div class="max-width-l">
         <div class="row margin-bottom">
           <div class="col-one-fourth">
-            <div>
-              <img class="min-width-l rounded" src="media/content/courses/chem-101.jpeg" srcset="media/content/courses/chem-101.jpeg 1x, media/content/courses/chem-101@2x.jpeg 2x" alt="Editor">
-            </div>
-            <!-- <i class="feature-icons material-icons bg-gradient-pink dark">format_shapes</i> -->
+              <img class="min-width-l rounded" src="media/content/courses/chem-101.jpeg" srcset="media/content/courses/chem-101.jpeg 1x, media/content/courses/chem-101@2x.jpeg 2x" alt="CHEM 101">
             <h6><br>CHEM 101 <br> Introduction to Chemistry</h6>
           </div>
-          <div class="col-one-fourth">
+          <!-- <div class="col-one-fourth">
             <i class="feature-icons material-icons bg-gradient-cyan dark">network_check</i>
             <h6>Rocket Fast</h6>
           </div>
@@ -126,7 +123,7 @@
           <div class="col-one-fourth">
             <i class="feature-icons material-icons bg-gradient-violet dark">check</i>
             <h6>HTML5 Valid</h6>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
