add course images, update volunteer program coming soon

--- a/about.html
+++ b/about.html
@@ -226,6 +226,12 @@
                     </ul>
                 </div>
                 <div class="col-one-fifth">
+                    <h6>Volunteer Programs</h6>
+                    <ul class="blank">
+                      <li>Coming Soon</li>
+                    </ul>
+                  </div>
+                <div class="col-one-fifth">
                     <h6>Support</h6>
                     <ul class="blank">
                         <li><a href="style-guide.html">Design System</a></li>
@@ -241,7 +247,7 @@
                         <!-- <li><a href="#">Medium</a></li> -->
                     </ul>
                 </div>
-                <div class="col-two-fifths">
+                <!-- <div class="col-two-fifths">
                     <h6>Join The Newsletter</h6>
                     <p>Get the latest news and resources right into your inbox every monday.</p>
                     <form class="row reduce-spacing">
@@ -252,7 +258,7 @@
                             <a href="#" class="button button-primary button-m full-width" role="button">Subscribe</a>
                         </div>
                     </form>
-                </div>
+                </div> -->
             </div>
         </div>
         <p class="copyright"><span>Copyright © 2024 TBC. All rights reserved.</span></p>
