--- a/default-template.html
+++ b/default-template.html
@@ -51,6 +51,12 @@
           </ul>
         </div>
         <div class="col-one-fifth">
+          <h6>Volunteer Programs</h6>
+          <ul class="blank">
+            <li>Coming Soon</li>
+          </ul>
+        </div>
+        <div class="col-one-fifth">
           <h6>Support</h6>
           <ul class="blank">
             <li><a href="style-guide.html">Design System</a></li>
