--- a/style-guide.html
+++ b/style-guide.html
@@ -21,8 +21,9 @@
       <div class="nav-toggle"></div>
       <ul class="inline">
         <li><a href="index.html">Home</a></li>
-        <li><a href="style-guide.html">Design System</a></li>
+        <!-- <li><a href="style-guide.html">Design System</a></li> -->
         <li><a href="academics.html">Academics</a></li>
+        <li><a href="about.html">About</a></li>
         <!-- <li><a href="login.html" class="button button-secondary button-m full-width-tablet" role="button">Log In</a></li> -->
         <li><a href="signup.html" class="button button-primary button-m full-width-tablet" role="button">Sign Up</a></li>
       </ul>
@@ -45,7 +46,7 @@
             <h6 class="sidebar-header">Components</h6>
             <ul class="blank">
               <li><a href="#logo">Logo</a></li>
-              <li><a href="#classes">Classes</a></li>
+              <!-- <li><a href="#classes">Classes</a></li>
               <li><a href="#grid">Grid</a></li>
               <li><a href="#colors">Colors</a></li>
               <li><a href="#icons">Icons</a></li>
@@ -55,7 +56,7 @@
               <li><a href="#alerts">Alerts</a></li>
               <li><a href="#tables">Tables</a></li>
               <li><a href="#cards">Cards</a></li>
-              <li><a href="#dark-mode">Dark Mode</a></li>
+              <li><a href="#dark-mode">Dark Mode</a></li> -->
             </ul>
           </aside>
         </div>
@@ -64,15 +65,14 @@
           <section id="logo">
             <h4>Logo</h4>
             <p class="paragraph">
-              <img class="right rounded" src="media/logos/logo-370x370.png" srcset="media/logos/logo-370x370.png 1x, media/logos/logo-370x370.png 2x" alt="Sketch">
               University Motto and Seal 
               
               “မဂ်ချမ်းသာ ပိုမိုမြင့်၊ ကဲ,ချင့် တောက်ထွန်း” is Taunggalay Buddhism College's official motto 
               and translates as “The Fruition of Holy Path Surpasses All.” 
-              
               <!-- The motto is part of the university seal? -->
             </p>
-            <div class="divider"></div>
+            <img class="left rounded" src="media/logos/logo-370x370.png" srcset="media/logos/logo-370x370.png 1x, media/logos/logo-370x370.png 2x" alt="Sketch">
+            <!-- <div class="divider"></div>
             <table>
               <tr>
                 <th>Alignment</th>
@@ -624,7 +624,7 @@
                 <h5>Card Title</h5>
                 <p class="paragraph">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
               </div>
-            </div>
+            </div> -->
           </section>
 
         </div>
@@ -641,6 +641,12 @@
           <ul class="blank">
             <li><a href="https://www.facebook.com/mkbavicaus">Karen Buddhist Association of North Carolina</a></li>
             <li><a href="https://www.facebook.com/mkbavicaus">Melbourne Karen Buddhist Association</a></li>
+          </ul>
+        </div>
+        <div class="col-one-fifth">
+          <h6>Volunteer Programs</h6>
+          <ul class="blank">
+            <li>Coming Soon</li>
           </ul>
         </div>
         <div class="col-one-fifth">
