update font size, north carolina monastery fb link, conducted in english online

--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
         }
 
         .profile-bio p {
-            font-size: 16px;
+            font-size: 19px;
             color: #666;
             line-height: 1.6;
             margin-bottom: 15px;
@@ -100,22 +100,39 @@
             </div>
         </section>
 
+        <section class="bg-dark center-tablet dark padding">
+            <div class="margin-bottom margin-top max-width-m">
+                <h2>About</h2>
+                <p class="lead">Taunggalay Buddhism College is a unique educational institution that aims to bridge the
+                    gap between traditional Buddhist teachings and modern scientific knowledge. Located in the Karen
+                    State of Myanmar, this two-year degree program is designed to equip bhikkhu, bhikkhunī, and
+                    laypeople with a comprehensive understanding of both Buddhist philosophy and contemporary academic
+                    disciplines.</p>
+
+            </div>
+        </section>
+
         <!-- https://codepen.io/didiaio/pen/LYgmQvz -->
 
         <div class="profile-container">
             <div class="profile-header">
                 <img src="media/content/founder-profile-pic.jpg" alt="Profile Picture" class="profile-pic">
-                <h1 class="profile-name">Dr. Ashin Paññasãmi (Biography)</h1>
+                <h1 class="profile-name">About the Founder: <br>Ven. Taunggalay Sayadaw</h1>
             </div>
             <div class="profile-bio">
                 <h2>Early life</h2>
-                <p>Early life
-                    Ven. Taung Ka Lay Sayadaw was born Saw Phoe Thu to Aung Khin and Nan Sein Hla Khin on Thursday, 14
+                <!-- <p>Early life
+                    Ven. Taunggalay Sayadaw was born Saw Phoe Thu to Aung Khin and Nan Sein Hla Khin on Thursday, 14
                     July 1960
                     (the 7th waning day of Warso in 1322 Myanmar era) in Hlar Ka Myin village in Hpa-an Township, Karen
-                    State, Burma.
+                    State, Burma. -->
+                <!-- Summarized by ChatGPT -->
+                <p>Ven. Taunggalay Sayadaw, born as Saw Phoe Thu to Aung Khin and Nan Sein Hla Khin on July 14, 1960,
+                    in Hlar Ka Myin village, Hpa-an Township, Karen State, Burma, began his monastic journey at the age
+                    of 8. On March 14, 1968, he was novitiated, and at 21, he was fully ordained as a Buddhist monk on
+                    March 21, 1981.</p>
 
-                <h2>Shin Paññāsāmī</h2>
+                <!-- <h2>Shin Paññāsāmī</h2>
                 <p>At the age of 8, he was novitiated on 14 March 1968 (the 7th waxing moon of Tapaung in the 1329
                     Myanmar era),
                     with Sayadaw Badanda Thuriya of Hlar Ka Myin Monastery as the preceptor and his parents as the
@@ -124,10 +141,10 @@
 
                     At the age of twenty-one, on 21 March 1981 (the 1st waxing moon of Tapaung in the 1342 Myanmar era),
                     the novice Pinnyathami was fully ordained as a Buddhist monk; his preceptor was Bhaddanda Thuzarta,
-                    the Shwebo Kyaung Sayadaw in Hpa-An, and his parents supporting the ordination.</p>
+                    the Shwebo Kyaung Sayadaw in Hpa-An, and his parents supporting the ordination.</p> -->
 
                 <h2>Monkhood and awards</h2>
-                <p>The pursuit of monastic education by Sayadaw Ashin Pin Nya Tha Mi has been remarkable.
+                <!-- <p>The pursuit of monastic education by Sayadaw Ashin Pin Nya Tha Mi has been remarkable.
                     He has passed many religious exams, some with honors: The Abhidharma exam,
                     the Pali Pahtamapyan Examinations, the Thuthama Saya exam, the Thaddhama Parla exam,
                     the Pidhakaya Paraku exam, Vinaya exam, and exam for a comparative study of world religions.
@@ -139,10 +156,12 @@
                     Sayadaw was awarded the honor of Thiri Pyanchi by the government of Myanmar. On January 4, 2023,
                     Sayadaw was awarded the honor of Agga Maha Kammatthanacariya, the title of 'Great Noble Meditation
                     Master',
-                    by the government of Myanmar.</p>
+                    by the government of Myanmar.</p> -->
+                <!-- Summarized by ChatGPT -->
+                <p>Sayadaw Ashin Pin Nya Tha Mi has excelled in his monastic education, passing numerous religious exams with honors. His relentless pursuit of wisdom earned him an honorary Doctor of Oriental Learning (Ph.D.) in history from the Indian Institute of Oriental Heritage in 2013. His dedication was further recognized when he was awarded the Thiri Pyanchi honor in 2022 and the title of Agga Maha Kammatthanacariya in 2023 by the Myanmar government.</p>
 
                 <h2>Community work</h2>
-                <p>The Venerable Sayadaw has also engaged in several other religious and social activities such as
+                <!-- <p>The Venerable Sayadaw has also engaged in several other religious and social activities such as
                     preaching
                     the Buddha's sermons, practicing and teaching mediations, renovating pagodas and taking
                     the roles of National Sangha Committee members. He has renovated over 20 ancient pagodas and
@@ -174,10 +193,12 @@
                     It is also reported that Taung Galay Sayadaw sent condolences to the passing
                     of Padoh Saw David Taw who was the secretary of the KNU Peace Committee and
                     also a member of a KNU delegation that negotiated peace with the Burmese government in January 2012.
-                </p>
+                </p> -->
+                <!-- Summarized by ChatGPT -->
+                <p>Sayadaw has been deeply involved in religious and social activities, including preaching, teaching meditation, renovating pagodas, and serving on the National Sangha Committee. He founded multiple monasteries and Monastic Education Schools in Kayin State, providing broader access to education. He has also been a leading peace negotiator for the Karen Peace Council since 1993 and established several social and development projects, including the Phlon Education Development Unit, First Aid Groups, and the orthopedic rehabilitation center in Hpa-an Township.</p>
 
                 <h2>Activities abroad</h2>
-                <p>The Venerable Sayadaw has traveled extensively. He has traveled to India, Nepal, and Sri Lanka in
+                <!-- <p>The Venerable Sayadaw has traveled extensively. He has traveled to India, Nepal, and Sri Lanka in
                     1994,
                     Thailand and Singapore in 1997, Japan in 2000, Australia in 2009, and America in 2015,
                     and conducted Dhamma talks with the Myanmar community in those countries as well as to citizens
@@ -185,22 +206,14 @@
                     to lead a good life and make a difference in their community and country.
                     With the motto “Toward the peaceful state of Nirvana,”
                     the Venerable Sayadaw Ashin Pin Nya Tha Mi continues
-                    to write books and articles while practicing and teaching meditation.</p>
-            </div>
+                    to write books and articles while practicing and teaching meditation.</p> -->
+                <!-- summarized by ChatGPT --> 
+                <p>Ven. Taunggalay Sayadaw has traveled extensively, sharing his teachings and inspiring people worldwide. His travels include India, Nepal, Sri Lanka, Thailand, Singapore, Japan, Australia, and America, where he has conducted Dhamma talks and promoted Buddhism. His work has profoundly impacted communities, encouraging them to lead better lives and contribute positively to society. Sayadaw continues to write books and articles, spreading his message of peace and the path toward Nirvana.</p>
+                </div>
         </div>
-        <section class="bg-dark center-tablet dark padding">
-            <div class="margin-bottom margin-top max-width-m">
-                <h2>About</h2>
-                <p class="lead">Taunggalay Buddhism College is a unique educational institution that aims to bridge the
-                    gap between traditional Buddhist teachings and modern scientific knowledge. Located in the Karen
-                    State of Myanmar, this two-year degree program is designed to equip bhikkhu, bhikkhunī, and
-                    laypeople with a comprehensive understanding of both Buddhist philosophy and contemporary academic
-                    disciplines.</p>
+        
 
-            </div>
-        </section>
-
-        <section class="bg-light center padding">
+        <!-- <section class="bg-light center padding">
             <div class="margin-bottom margin-top max-width-m">
                 <h2>Mission and Vision</h2>
                 <p class="lead">The college's motto, "The Fruition of Holy Path Surpasses all," encapsulates its
@@ -210,7 +223,7 @@
                     of Buddhist wisdom and scientific inquiry, fostering a new generation of scholars and leaders who
                     can navigate the complexities of the modern world with compassion and wisdom.
             </div>
-        </section>
+        </section> -->
 
     </main>
 
@@ -220,7 +233,8 @@
                 <div class="col-one-fifth">
                     <h6>Exchange Programs</h6>
                     <ul class="blank">
-                        <li><a href="https://www.facebook.com/mkbavicaus">Karen Buddhist Association of North
+                        <li><a href="https://www.facebook.com/profile.php?id=100064552794214">Karen Buddhist Association
+                                of North
                                 Carolina</a></li>
                         <li><a href="https://www.facebook.com/mkbavicaus">Melbourne Karen Buddhist Association</a></li>
                     </ul>
@@ -228,9 +242,9 @@
                 <div class="col-one-fifth">
                     <h6>Volunteer Programs</h6>
                     <ul class="blank">
-                      <li>Coming Soon</li>
+                        <li>Coming Soon</li>
                     </ul>
-                  </div>
+                </div>
                 <div class="col-one-fifth">
                     <h6>Support</h6>
                     <ul class="blank">
