--- a/academics.html
+++ b/academics.html
@@ -68,7 +68,7 @@
         <p class="lead">
           Taunggalay Buddhism College welcomes applications from bhikkhu, bhikkhunī, and laypeople who have completed a
           certain level of Pariyatti study in Buddhism. Applicants must be between the ages of 18 and 25 and have a
-          basic or intermediate level of English proficiency, as all instruction will be conducted in English. For those
+          basic or intermediate level of English proficiency, as all instruction will be in English and conducted online. For those
           fluent only in Burmese and East Pwo Karen (Phlon), teaching assistants will be available to provide guidance
           throughout the course.
         </p>
@@ -91,7 +91,7 @@
         <div class="col-one-third">
           <i class="feature-icons material-icons bg-gradient-pink dark">tune</i>
           <h5>Language of instruction</h5>
-          <p class="lead">All instruction will be conducted in English. For those fluent only in Burmese and East Pwo
+          <p class="lead">All instruction will be in English, and conducted online. For those fluent only in Burmese and East Pwo
             Karen (Phlon), teaching assistants will be available to provide guidance throughout the course.</p>
         </div>
       </div>
@@ -180,6 +180,10 @@
         </div>
       </div>
 
+      <p class="left"><b>Disclaimer:</b> Some of the course images are generated using AI for inspirational purposes only and may not accurately depict real-life situations.</p>
+<!-- 
+      <div class="max-width-l">
+        <div class="row margin-bottom"></div></div> -->
 
     </section>
 
@@ -191,7 +195,7 @@
         <div class="col-one-fifth">
           <h6>Exchange Programs</h6>
           <ul class="blank">
-            <li><a href="https://www.facebook.com/mkbavicaus">Karen Buddhist Association of North Carolina</a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100064552794214">Karen Buddhist Association of North Carolina</a></li>
             <li><a href="https://www.facebook.com/mkbavicaus">Melbourne Karen Buddhist Association</a></li>
           </ul>
         </div>
