--- a/default-template.html
+++ b/default-template.html
@@ -46,7 +46,7 @@
         <div class="col-one-fifth">
           <h6>Exchange Programs</h6>
           <ul class="blank">
-            <li><a href="https://www.facebook.com/mkbavicaus">Karen Buddhist Association of North Carolina</a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100064552794214">Karen Buddhist Association of North Carolina</a></li>
             <li><a href="https://www.facebook.com/mkbavicaus">Melbourne Karen Buddhist Association</a></li>
           </ul>
         </div>
