--- a/index.html
+++ b/index.html
@@ -140,14 +140,14 @@
       </div>
     </section> -->
 
-    <section class="bg-dark center-tablet dark padding">
+    <!-- <section class="bg-dark center-tablet dark padding">
       <div class="margin-bottom margin-top max-width-m">
         <h2>About</h2>
         <p class="lead">Taunggalay Buddhism College is a unique educational institution that aims to bridge the gap between traditional Buddhist teachings and modern scientific knowledge. Located in the Karen State of Myanmar, this two-year degree program is designed to equip bhikkhu, bhikkhunī, and laypeople with a comprehensive understanding of both Buddhist philosophy and contemporary academic disciplines.</p>
       </div>
-    </section>
+    </section> -->
 
-    <section class="bg-light center padding">
+    <section class="bg-dark center-tablet dark padding">
       <div class="margin-bottom margin-top max-width-m">
         <h2>Mission and Vision</h2>
         <p class="lead">The college's motto, "The Fruition of Holy Path Surpasses all," encapsulates its mission to provide a transformative educational experience that empowers students to deepen their spiritual understanding while also cultivating practical skills and critical thinking abilities. The vision of Taunggalay Buddhism College is to become a leading center of excellence in the integration of Buddhist wisdom and scientific inquiry, fostering a new generation of scholars and leaders who can navigate the complexities of the modern world with compassion and wisdom.
@@ -162,7 +162,7 @@
         <div class="col-one-fifth">
           <h6>Exchange Programs</h6>
           <ul class="blank">
-            <li><a href="https://www.facebook.com/mkbavicaus">Karen Buddhist Association of North Carolina</a></li>
+            <li><a href="https://www.facebook.com/profile.php?id=100064552794214">Karen Buddhist Association of North Carolina</a></li>
             <li><a href="https://www.facebook.com/mkbavicaus">Melbourne Karen Buddhist Association</a></li>
           </ul>
         </div>
